Fix some styling on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -2,3 +2,7 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @import '@oliverflecke/components-react/dist/main';
+
+td, th {
+  @apply px-4;
+}
